# rust_server_test

backend/: .gitignore  Cargo.toml  Rocket.toml
backend/src/: main.rs
backend/templates/: header.html.tera  index.html.tera
ios/: Podfile
ios/boood/: AppDelegate.swift  Product.swift  SceneDelegate.swift  ViewController.swift
ios/boood.xcodeproj/: project.pbxproj
ios/boood.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/boood.xcodeproj/project.xcworkspace/xcuserdata/alagris.xcuserdatad/: UserInterfaceState.xcuserstate
ios/boood.xcodeproj/xcuserdata/alagris.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/boood.xcworkspace/: contents.xcworkspacedata
ios/boood.xcworkspace/xcuserdata/alagris.xcuserdatad/: UserInterfaceState.xcuserstate
ios/boood/Base.lproj/: Main.storyboard
ios/boood/boood.xcdatamodeld/: .xccurrentversion
ios/booodTests/: booodTests.swift
ios/booodUITests/: booodUITests.swift
scripts/: Scraper.py
