[package]
name = "website"
version = "0.1.0"
authors = ["Alagris <alagris12358@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.3"
r2d2-mongodb = "*"
mongodb = "2.0.0-alpha.1"
rocket = "0.4.7"
futures = "0.3.14"
dotenv = "0.13.0"
askama = "0.10.5"
serde = "1.0.125"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
